examples/test/testpolicy11607.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11607
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key4: value11
      key36: value43
      key15: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value39
          key14: value32
          key47: value32
      podSelector:
        matchLabels:
          key5: value3
